# ctgan-experiment

./: README.md  main.py  pyproject.toml  report.md  report.tex
outputs/: dcr_results.csv  metrics_task2.csv  metrics_task2_ctgan.csv  metrics_task2_tvae.csv  metrics_task3.csv
