[project]
name = "ctgan-tvae-experiment"
version = "0.1.0"
description = "CTGAN vs TVAE on Adult dataset — ML efficacy, privacy (DCR)"
authors = [
    { name = "Oscar Nolen", email = "oscarnolen@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "ctgan>=0.11.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "sdv>=1.25.0",
]

[tool.uv]
# Optional: specify resolution behavior or index if needed
python-preference = "managed"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
